style: apply Spotless formatting [skip ci]